<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/studentsListFragment">

    <fragment
        android:id="@+id/studentsListFragment"
        android:name="com.example.tutortracking.ui.StudentsListFragment"
        android:label="Students"
        tools:layout="@layout/fragment_students_list">
        <action
            android:id="@+id/action_studentsListFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/studentsListFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_studentsListFragment_to_addStudentBottomSheetFragment"
            app:destination="@id/addStudentBottomSheetFragment" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.tutortracking.ui.LoginFragment"
        android:label="Sign In"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment"
            app:popUpTo="@id/loginFragment" />
        <action
            android:id="@+id/action_loginFragment_to_studentsListFragment"
            app:destination="@id/studentsListFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.tutortracking.ui.RegisterFragment"
        android:label="Sign Up"
        tools:layout="@layout/fragment_register">
        <action
            android:id="@+id/action_registerFragment_to_studentsListFragment"
            app:destination="@id/studentsListFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_registerFragment_to_studentsListFragment2"
            app:destination="@id/studentsListFragment" />
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.tutortracking.ui.ProfileFragment"
        android:label="Profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_profileFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/studentsListFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <dialog
        android:id="@+id/addStudentBottomSheetFragment"
        android:name="com.example.tutortracking.ui.AddStudentBottomSheetFragment"
        android:label="AddStudentBottomSheetFragment" >
        <argument
            android:name="student"
            app:argType="com.example.tutortracking.data.localdata.models.LocalStudent"
            app:nullable="true"
            android:defaultValue="@null" />
    </dialog>
    <fragment
        android:id="@+id/chatFragment"
        android:name="com.example.tutortracking.ui.ChatFragment"
        android:label="Chat"
        tools:layout="@layout/fragment_chat" />
</navigation>