<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/register_image_view"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/image_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/register_on_image_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/stoke_light"
            android:gravity="center"
            android:maxEms="8"
            android:text="Choose an image (optional)"
            android:textColor="@color/buttonTextColor"
            app:layout_constraintBottom_toBottomOf="@+id/register_image_view"
            app:layout_constraintEnd_toEndOf="@+id/register_image_view"
            app:layout_constraintStart_toStartOf="@+id/register_image_view"
            app:layout_constraintTop_toTopOf="@+id/register_image_view" />

        <EditText
            android:id="@+id/register_password_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:fontFamily="@font/stoke_light"
            android:hint="Password*"
            android:inputType="textPassword"
            android:paddingLeft="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_email_et" />

        <EditText
            android:id="@+id/register_modules_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:fontFamily="@font/stoke_light"
            android:hint="Module"
            android:inputType="textCapWords"
            android:paddingLeft="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_chip_group" />

        <EditText
            android:id="@+id/register_name_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:fontFamily="@font/stoke_light"
            android:hint="Tutor's Name*"
            android:inputType="textCapWords"
            android:paddingLeft="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_image_view" />

        <EditText
            android:id="@+id/register_email_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:fontFamily="@font/stoke_light"
            android:hint="Tutor's Email*"
            android:inputType="textEmailAddress"
            android:paddingLeft="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_name_et" />


        <Button
            android:id="@+id/register_register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/stoke_light"
            android:text="Register"
            android:textAllCaps="false"
            android:textColor="@color/buttonTextColor"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/register_modules_et"
            app:layout_constraintTop_toBottomOf="@+id/register_modules_et" />

        <ProgressBar
            android:id="@+id/registerProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/register_add_chips_button"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:background="@android:color/transparent"
            android:text="Add"
            android:textColor="@color/buttonTextColor"
            app:layout_constraintBottom_toBottomOf="@+id/register_modules_et"
            app:layout_constraintEnd_toEndOf="@+id/register_modules_et"
            app:layout_constraintTop_toTopOf="@+id/register_modules_et" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/register_chip_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_password_et">

        </com.google.android.material.chip.ChipGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>